@@ -18,7 +18,8 @@
 |  v0.1.3                                                                     |
 +-----------------------------------------------------------------------------|
   
-  + Improve the toggleable lights logic
+  + Improve the toggleable lights logic\
+  + Added some documentary in the scripts
   
   = Known issues
     - [N/A] Flint and Steel still makes a sound when used on the
